# spotlite-insar-sloperisk

./: .dockerignore  .gitignore  Dockerfile  README.md  insar_risk.py  insar_risk_apply.py  main.py  pyproject.toml  risk_apply_func.R  risk_input_func.R
.github/workflows/: test.yml
data/: ver_A10.csv
src/: core.py
src/utils/: helpers.py
