[project]
name = "slope-risk-analysis"
version = "0.1.0"
description = "Slope risk analysis matched to local environment"
readme = "README.md"
# Your local python is 3.13.5, so we require at least 3.13
requires-python = ">=3.10,<3.11"
dependencies = [
    "geopandas>=0.13",
    "joblib>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # LOCKED VERSIONS (Matches your Spyder Environment)
    "scikit-learn==1.6.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "xgboost>=2.0",
]